--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
   sizer: ^2.0.15
+  go_router: ^12.0.1
 
 dev_dependencies:
   flutter_test:
