--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   sizer: ^2.0.15
   go_router: ^12.0.1
+  flutter_svg: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asset/img/common/
+    - assets/imgs/common/
+    - assets/imgs/pork/
+    - assets/icons/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -80,23 +83,23 @@ flutter:
   fonts:
     - family: Pretendard
       fonts:
-        - asset: fonts/Pretendard-Black.otf
+        - asset: assets/fonts/Pretendard-Black.otf
           weight: 900
-        - asset: fonts/Pretendard-ExtraBold.otf
+        - asset: assets/fonts/Pretendard-ExtraBold.otf
           weight: 800
-        - asset: fonts/Pretendard-Bold.otf
+        - asset: assets/fonts/Pretendard-Bold.otf
           weight: 700
-        - asset: fonts/Pretendard-SemiBold.otf
+        - asset: assets/fonts/Pretendard-SemiBold.otf
           weight: 600
-        - asset: fonts/Pretendard-Medium.otf
+        - asset: assets/fonts/Pretendard-Medium.otf
           weight: 500
-        - asset: fonts/Pretendard-Regular.otf
+        - asset: assets/fonts/Pretendard-Regular.otf
           weight: 400
-        - asset: fonts/Pretendard-Light.otf
+        - asset: assets/fonts/Pretendard-Light.otf
           weight: 300
-        - asset: fonts/Pretendard-ExtraLight.otf
+        - asset: assets/fonts/Pretendard-ExtraLight.otf
           weight: 200
-        - asset: fonts/Pretendard-Thin.otf
+        - asset: assets/fonts/Pretendard-Thin.otf
           weight: 100
     
   #
