--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sizer: ^2.0.15
   go_router: ^12.0.1
   flutter_svg: ^1.0.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
