refactor: change home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sizer: ^2.0.15
   go_router: ^12.0.1
   shared_preferences: ^2.2.3
+  phosphor_flutter: ^2.1.0
 
 dev_dependencies:
   flutter_test:
