--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   phosphor_flutter: ^2.1.0
   url_launcher: ^6.3.0
   smooth_page_indicator: ^1.2.0+3
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  shimmer: ^3.0.0
+  firebase_storage: ^12.3.3
 
 dev_dependencies:
   flutter_test:
