--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   shimmer: ^3.0.0
   firebase_storage: ^12.3.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
